# BoberAutoScanner

./: README.md  pyproject.toml  requirements.txt
bober_autoscanner/: scanner.py
